# OPManalysis

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
examples/: .example_of_analysis.ipynb.layout  Multi-data_analysis.ipynb  example_of_analysis.ipynb
examples/Demo_data/: MokuLockInAmplifierData_20250619_150732_Settings.txt  MokuLockInAmplifierData_20250619_150732_Traces.csv  MokuOscilloscopeData_20250923_163648_HighRes.csv  MokuOscilloscopeData_20250923_163648_Settings.txt
examples/Demo_data/noise/: MokuLockInAmplifierData_20250619_150805_Settings.txt  MokuLockInAmplifierData_20250619_150805_Traces.csv  MokuOscilloscopeData_20250923_163712_HighRes.csv  MokuOscilloscopeData_20250923_163712_Settings.txt
labtils/: notifier.py
labutils/: __init__.py
opm_batch/: __init__.py  config.py  io_utils.py  layout.py  metrics.py  pipeline.py  plotting.py  reporting.py
opmtool/: __init__.py  dataprocess.py  fittingtool.py
scripts/: batch_opm_summary.py
