[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "opmanalysis"
version = "0.1.0"
description = "Fitting and preprocessing tools for optically pumped magnetometers"
authors = [{ name = "Yi-Hsuan Chen", email = "yschen222@gmail.com" }]
readme = "README.md"
license = { text = "MIT" }
dependencies = [
    "numpy",
    "pandas",
    "scipy",
    "matplotlib",
    "lmfit"
]
requires-python = ">=3.8"

[tool.setuptools]
packages = ["opmanalysis"]